--- a/src/components/pages/dashboardpage/DashboardPage.css
+++ b/src/components/pages/dashboardpage/DashboardPage.css
@@ -1,6 +1,6 @@
 @import '../../assets/fonts/Fonts.css';
 
-.body {
+body {
   min-height: 100vh;
 }
 
